--- a/LinearRegressionCaseStudy/Springboard Regression Case Study - the Red Wine Dataset - Tier 2.ipynb
+++ b/LinearRegressionCaseStudy/Springboard Regression Case Study - the Red Wine Dataset - Tier 2.ipynb
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import relevant libraries and packages.\n",
-    "import _ _ _ as np \n",
-    "import _ _ _ as pd \n",
-    "import _ _ _.pyplot as plt \n",
-    "import _ _ _ as sns # For all our visualization needs.\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns # For all our visualization needs.\n",
     "import statsmodels.api as sm # What does this do? Find out and type here.\n",
     "from statsmodels.graphics.api import abline_plot # What does this do? Find out and type here.\n",
     "from sklearn.metrics import mean_squared_error, r2_score # What does this do? Find out and type here.\n",
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data. We'll set the parameter index_col to 0, because the first column contains no useful data. \n",
-    "wine = pd._ _ _(\"wineQualityReds.csv\", index_col=0)"
+    "wine = pd.read_csv(\"wineQualityReds.csv\", index_col=0)"
    ]
   },
   {
@@ -109,26 +109,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed.acidity</th>\n",
+       "      <th>volatile.acidity</th>\n",
+       "      <th>citric.acid</th>\n",
+       "      <th>residual.sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free.sulfur.dioxide</th>\n",
+       "      <th>total.sulfur.dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.9978</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.9968</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.092</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0.9970</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed.acidity  volatile.acidity  citric.acid  residual.sugar  chlorides  \\\n",
+       "1            7.4              0.70         0.00             1.9      0.076   \n",
+       "2            7.8              0.88         0.00             2.6      0.098   \n",
+       "3            7.8              0.76         0.04             2.3      0.092   \n",
+       "\n",
+       "   free.sulfur.dioxide  total.sulfur.dioxide  density    pH  sulphates  \\\n",
+       "1                 11.0                  34.0   0.9978  3.51       0.56   \n",
+       "2                 25.0                  67.0   0.9968  3.20       0.68   \n",
+       "3                 15.0                  54.0   0.9970  3.26       0.65   \n",
+       "\n",
+       "   alcohol  quality  \n",
+       "1      9.4        5  \n",
+       "2      9.8        5  \n",
+       "3      9.8        5  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The first thing we do after importing data - call a .head() on it to check out its appearance. \n",
-    "wine._ _ _"
+    "wine.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1599 entries, 1 to 1599\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   fixed.acidity         1599 non-null   float64\n",
+      " 1   volatile.acidity      1599 non-null   float64\n",
+      " 2   citric.acid           1599 non-null   float64\n",
+      " 3   residual.sugar        1599 non-null   float64\n",
+      " 4   chlorides             1599 non-null   float64\n",
+      " 5   free.sulfur.dioxide   1599 non-null   float64\n",
+      " 6   total.sulfur.dioxide  1599 non-null   float64\n",
+      " 7   density               1599 non-null   float64\n",
+      " 8   pH                    1599 non-null   float64\n",
+      " 9   sulphates             1599 non-null   float64\n",
+      " 10  alcohol               1599 non-null   float64\n",
+      " 11  quality               1599 non-null   int64  \n",
+      "dtypes: float64(11), int64(1)\n",
+      "memory usage: 162.4 KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Another very useful method to call on a recently imported dataset is .info(). Call it here to get a good\n",
     "# overview of the data:\n",
     "# Examine the data types of our dataset\n",
-    "_ _ _._ _ _"
+    "wine.info()"
    ]
   },
   {
@@ -142,14 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are: 1599 rows.\n",
+      "There are: 12 commas.\n"
+     ]
+    }
+   ],
    "source": [
     "# We should also look more closely at the dimensions of the dataset with .shape().\n",
     "# Remember: parameters to print() are separated by commas. \n",
     "print(\"There are:\", wine.shape[0], 'rows.')\n",
-    "print(\"There are:\", _ _ _._ _ _[1], '_ _ _.')"
+    "print(\"There are:\", wine.shape[1], 'commas.')"
    ]
   },
   {
@@ -846,7 +988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
